--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
   <script src="js/site.js" async></script>
 </head>
 <body>
-
+    <header>
+        <h1>LEGO Bi-Weekly</h1>
+    </header>
+    <h3>Sign up to recieve information on new LEGO sets, upcoming sales, some of the hottest LEGO MOCs, and other LEGO-related news!</h3>
+    <div>
+        <form method="POST" action="#null" autocomplete="on">
+            <div>
+                <label>Email Address:</label>
+                <input type="email" name="email" placeholder="example@example.com">
+              </div>
+              <div>
+                <label>Phone Number:</label>
+                <input type="tel" name="phonenumber" placeholder="000-000-0000">
+              </div>
+              <div>
+                <label>Date of Birth:</label>
+                <input type="date" name="dob">
+              </div>
+              <div>
+                <input type="submit" value="Submit Form" id="subbutton">
+              </div>
+        </form>
+    </div>
 </body>
 <footer>
 
