--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                 <input type="date" name="dob">
               </div>
               <div>
+                <label>I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
+                <input type="checkbox" name="terms-and-conditions">
+              </div>
+              <div>
+                <label>I am at least 16 years old</label>
+                <input type="checkbox" name="age">
+              </div>
+              
+              <div>
                 <input type="submit" value="Submit Form" id="subbutton">
               </div>
         </form>
