--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>LEGO Bi-Weekly</h1>
     </header>
     <h3>Sign up to recieve information on new LEGO sets, upcoming sales, some of the hottest LEGO MOCs, and other LEGO-related news!</h3>
-    <div>
+    <div id="wrapper">
         <form method="POST" action="#null" autocomplete="on">
             <div>
                 <label>Email Address:</label>
