Added CSS for smallest size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>LEGO Bi-Weekly</h1>
     </header>
-    <h3>Sign up to recieve information on new LEGO sets, upcoming sales, some of the hottest LEGO MOCs, and other LEGO-related news!</h3>
+    <h3>Sign up to recieve our bi-weekly email newsletter on new LEGO sets, upcoming sales, some of the hottest LEGO MOCs, and other LEGO-related news!</h3>
     <div id="wrapper">
         <form method="POST" action="#null" autocomplete="on">
             <div>
@@ -20,22 +20,17 @@
                 <input type="email" name="email" placeholder="example@example.com">
               </div>
               <div>
-                <label>Phone Number:</label>
-                <input type="tel" name="phonenumber" placeholder="000-000-0000">
-              </div>
-              <div>
                 <label>Date of Birth:</label>
                 <input type="date" name="dob">
               </div>
-              <div>
+              <div id="check">
+                <input type="checkbox" name="terms-and-conditions" >
                 <label>I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
-                <input type="checkbox" name="terms-and-conditions">
               </div>
-              <div>
+              <div id="check">
+                <input type="checkbox" name="age" >
                 <label>I am at least 16 years old</label>
-                <input type="checkbox" name="age">
               </div>
-              
               <div>
                 <input type="submit" value="Submit Form" id="subbutton">
               </div>
