Added first media query

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
               </div>
               <div id="check">
                 <input type="checkbox" name="terms-and-conditions" >
-                <label>I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
+                <label id="checklabel">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
               </div>
               <div id="check">
                 <input type="checkbox" name="age" >
-                <label>I am at least 16 years old</label>
+                <label id="checklabel">I am at least 16 years old</label>
               </div>
               <div>
                 <input type="submit" value="Submit Form" id="subbutton">
