--- a/index.html
+++ b/index.html
@@ -16,23 +16,31 @@
     <div id="wrapper">
         <form method="POST" action="#null" autocomplete="on">
             <div>
-                <label>Email Address:</label>
+                <label for="fname">First Name</label>
+                <input type="text" name="fname" >
+              </div>
+              <div>
+                <label for="lname">Last Name</label>
+                <input type="text" name="lname" >
+              </div>
+            <div>
+                <label for="email">Email Address:</label>
                 <input type="email" name="email" placeholder="example@example.com">
               </div>
               <div>
-                <label>Date of Birth:</label>
+                <label  for="dob">Date of Birth:</label>
                 <input type="date" name="dob">
               </div>
               <div id="check">
                 <input type="checkbox" name="terms-and-conditions" >
-                <label id="checklabel">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
+                <label id="checklabel" for="tandc">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
               </div>
               <div id="check">
                 <input type="checkbox" name="age" >
-                <label id="checklabel">I am at least 16 years old</label>
+                <label id="checklabel"  for="age">I am at least 16 years old</label>
               </div>
               <div>
-                <input type="submit" value="Submit Form" id="subbutton">
+                <input type="submit" value="Sign Up!" id="subbutton">
               </div>
         </form>
     </div>
