changed date of birth to birthday

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input type="email" name="email" placeholder="example@example.com">
               </div>
               <div>
-                <label  for="dob">Date of Birth:</label>
+                <label  for="dob">Birthday:</label>
                 <input type="date" name="dob">
               </div>
               <div id="check">
