--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
         <form method="POST" action="#null" autocomplete="on">
             <div>
                 <label for="fname">First Name</label>
-                <input type="text" name="fname" >
+                <input type="text" name="fname" id="fname" >
               </div>
               <div>
                 <label for="lname">Last Name</label>
-                <input type="text" name="lname" >
+                <input type="text" name="lname" id="lname">
               </div>
             <div>
                 <label for="email">Email Address:</label>
-                <input type="email" name="email" placeholder="example@example.com">
+                <input type="email" name="email" id="email" placeholder="example@example.com">
               </div>
               <div>
                 <label  for="dob">Birthday:</label>
-                <input type="date" name="dob">
+                <input type="date" name="dob" id="dob">
               </div>
-              <div id="check">
-                <input type="checkbox" name="terms-and-conditions" >
-                <label id="checklabel" for="tandc">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
+              <div class="check">
+                <input type="checkbox" name="terms-and-conditions" id="tandc">
+                <label class="checklabel" for="tandc">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
               </div>
-              <div id="check">
-                <input type="checkbox" name="age" >
-                <label id="checklabel"  for="age">I am at least 16 years old</label>
+              <div class="check">
+                <input type="checkbox" name="age" id="age">
+                <label class="checklabel"  for="age">I am at least 16 years old</label>
               </div>
               <div>
                 <input type="submit" value="Sign Up!" id="subbutton">
