--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
               <div class="check">
                 <input type="checkbox" name="terms-and-conditions" id="tandc">
-                <label class="checklabel" for="tandc">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer">here</a></label>
+                <label class="checklabel" for="tandc">I have read the terms and conditions listed <a href="https://generator.lorem-ipsum.info/terms-and-conditions" target="_blank" rel="noopener noreferrer" id="terms">here</a></label>
               </div>
               <div class="check">
                 <input type="checkbox" name="age" id="age">
